--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparentFocused">#B869902D</color>
+    <color name="transparentUnfocused">#A57EA856</color>
+    <color name="transparentWhite">#FFFFFFFF</color>
 </resources>
